# ResidentEvilDataCollection

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: collect.py
