[project]
name = "coleta-dados-resident-evil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
